# seculex

./: .gitignore  README.md  config.json  example_verify.json  footer.py  main.py  marriages.json  pyproject.toml  requirements.txt  restore_backup.py  start.py
cogs/: about.py  admin.py  afk.py  auto_responder.py  avatar.py  botinfo.py  calculator.py  casino.py  fun.py  games.py  giveaway.py  help.py  info.py  invoice.py  message_tools.py  moderation.py  nuke.py  purge.py  reminder.py  roles.py  social_media.py  tickets.py  timer.py  todo.py  utilities.py  verification.py  web_tools.py  welcome.py
cogs/settings/: settings.json
cogs/tickets/: tickets.json
cogs/tickets/transcripts/: transcript_1345687030742646866_20250302_111618.html  transcript_1345831331384397946_20250309_125745.html  transcript_1346071167022137345_20250303_104710.html  transcript_1346071167022137345_20250303_104811.html  transcript_1346311944600031355_20250306_075618.html  transcript_1346312368694497340_20250304_024614.html  transcript_1348336680012353547_20250309_164851.html  transcript_1348379659460415601_20250309_193939.html  transcript_1348379780780785766_20250309_193959.html  transcript_1348379942127140925_20250309_194034.html  transcript_1349102147421081652_20250311_193021.html  transcript_1349102147421081652_20250311_193029.html  transcript_1395392811779493938_20250723_153717.html  transcript_1395392811779493938_20250723_153749.html  (+2 more)
data/: auto_responses.json  command_analytics.json  currency_data.json  user_timezones.json  welcome_settings.json
utils/: analytics.py  backup.py  storage.py
